modify index.html file

--- a/about.html
+++ b/about.html
@@ -12,7 +12,9 @@
 <div class="container">
     <!--<div class="container-fluid">-->
     <div class="row">
-        <div class="col-xl-2 col-lg-3 col-md-3 col-sm-6" style="height: 200px; border: 1px solid; " ></div>
+        <div class="col-xl-2 col-lg-3 col-md-3 col-sm-6" style="height: 200px; border: 1px solid; " >
+            <img src="images/IMG_4773-3.jpg" class="img-thumbnail" height="200" width="200" alt=""/>
+        </div>
         <div class="col-xl-10 col-lg-9 col-md-9 col-sm-6 " style="height: 200px; border: 1px solid; " align="middle" >
             <h3 align="middle">Portfolio create by using Bootstrap CSS</h3>
         </div>
@@ -33,8 +35,31 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-xl-2 col-lg-2 col-md-3 col-sm-4" style="height: 600px; border: 1px solid; " ></div>
-        <div class="col-xl-10 col-lg-10 col-md-9 col-sm-8" style="height: 600px; border: 1px solid; " ></div>
+        <div class="col-xl-12 col-lg-2 col-md-3 col-sm-4" style="height: 600px; border: 1px solid; " >
+            <img src="images/me.jpg" height="500" width="280" align="right" alt="">
+
+              <p>  Hi, I am <b>Shetu Chowdhury</b>. I love to gain my goal and be happy with my
+                decision. I am friendly and hardworking person. Love to spend time with
+                my family and friends. And I want to be a happy person and to keep happy
+                other people around me. . Trying to develop my skill on web developing
+                side. I would like to learn some language (E.g English, Chinese, Italian
+                & Russian). Travelling, gaming & watching movies are pleasure for me.
+                And I really want to know about different cultures of our country.
+              </p>
+            <p>
+                My mother is a one of the best mother in this world  and she always
+                support me. I have three loving brothers. They are very caring and
+                concern about me and I am very lucky to become a sister of three loving
+                brothers. My two elder brothers are married and I have a cute niece in
+                my family. Now she is the younger family member in my home and we are
+                really blessed for the beautiful gift from Allah.
+            </p>
+            <p>
+                I have lots of lovely friends. Now I really miss them and when we manage
+                time we meet each other  and spend very memorable and special time.
+            </p>
+        </div>
+
     </div>
 </div>
 
