--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,9 @@
 <div class="container">
     <!--<div class="container-fluid">-->
     <div class="row">
-        <div class="col-xl-2 col-lg-3 col-md-3 col-sm-6" style="height: 200px; border: 1px solid; " ></div>
+        <div class="col-xl-2 col-lg-3 col-md-3 col-sm-6" style="height: 200px; border: 1px solid; " >
+            <img src="images/IMG_4773-3.jpg" class="img-thumbnail" height="200" width="200" alt=""/>
+        </div>
         <div class="col-xl-10 col-lg-9 col-md-9 col-sm-6 " style="height: 200px; border: 1px solid; " align="middle" >
             <h3 align="middle">Portfolio create by using Bootstrap CSS</h3>
         </div>
@@ -33,8 +35,47 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-xl-2 col-lg-2 col-md-3 col-sm-4" style="height: 600px; border: 1px solid; " ></div>
-        <div class="col-xl-10 col-lg-10 col-md-9 col-sm-8" style="height: 600px; border: 1px solid; " ></div>
+        <!--<div class="col-xl-2 col-lg-2 col-md-3 col-sm-4" style="height: 600px; border: 1px solid; " ></div>-->
+        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12" style="height: 600px; border: 1px solid; " >
+            <pre>
+            <b>Contact with me:</b>
+
+            Name      : Shetu Chowdhury
+            Contact no: 01672262919
+            Email     : shetuchowdhury17@gamil.com
+            </pre>
+
+            <div class="col-sm-8">
+                <hr/>
+                <div class="form-group row">
+                <label class="col-form-label col-sm-3">First name</label>
+                <div class="col-sm-9">
+                <input type="text" name="first_name" class="form-control">
+                </div>
+                </div>
+
+                <div class="form-group row">
+                <label class="col-form-label col-sm-3">Last name</label>
+                <div class="col-sm-9">
+                <input type="text" name="last_name" class="form-control">
+                </div>
+                </div>
+
+                <div class="form-group row">
+                <label class="col-form-label col-sm-3">Email Address</label>
+                <div class="col-sm-9">
+                <input type="email" name="email_address" class="form-control">
+                </div>
+                </div>
+                <div class="form-group row">
+                    <label class="col-form-label col-sm-3"></label>
+                    <div class="col-sm-9">
+                    <input type="submit" name="btn" class="btn btn-success btn-block"/>
+                    </div>
+                    </div>
+
+
+        </div>
     </div>
 </div>
 
