--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <div class="container">
     <!--<div class="container-fluid">-->
     <div class="row">
-        <div class="col-xl-2 col-lg-3 col-md-3 col-sm-6" style="height: 200px; border: 1px solid; " ></div>
+        <div class="col-xl-2 col-lg-3 col-md-3 col-sm-6" style="height: 200px; border: 1px solid; " >
+            <img src="images/IMG_4773-3.jpg" class="img-thumbnail" height="200" width="200" alt=""/>
+        </div>
         <div class="col-xl-10 col-lg-9 col-md-9 col-sm-6 " style="height: 200px; border: 1px solid; " align="middle" >
             <h3 align="middle">Portfolio create by using Bootstrap CSS</h3>
         </div>
@@ -33,8 +35,42 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-xl-2 col-lg-2 col-md-3 col-sm-4" style="height: 600px; border: 1px solid; " ></div>
-        <div class="col-xl-10 col-lg-10 col-md-9 col-sm-8" style="height: 600px; border: 1px solid; " ></div>
+        <div class="col-xl-2 col-lg-2 col-md-3 col-sm-4" style="height: 600px; border: 1px solid; " >
+
+            <img src="images/mission_statement.png" class="img-thumbnail" height="200" width="200" alt=""/>
+
+            <img src="images/vision.jpg" class="img-thumbnail" height="130 " width="140" alt=""/>
+
+            <img src="images/Dreams.jpg" class="img-thumbnail" height="200" width="200" alt=""/>
+
+        </div>
+        <div class="col-xl-10 col-lg-10 col-md-9 col-sm-8" style="height: 600px; border: 1px solid; " >
+            <pre>
+            <!--<p>-->
+            Now I am doing a training course for <b>Web Application Development –PHP</b>. And I want to learn more
+            about <b>Web Application Development</b> by using PHP which I can use for my future career growth.
+            <!--</p>-->
+            <!--<p>-->
+
+            I want to be a well known web application developer. For gaining my goal I try to give my best effort.
+            And I am working on it. I want to be expert on my work
+            <!--</p>-->
+            <!--<p>-->
+
+
+
+            I have lots of dreams……
+            1. To be a well known <b>Web Application Developer</b>.
+            2. Be a hacker.
+            3. Be an expert on my work.
+            4. Wants to buy different type of cars.
+            5. I want to keep a lion as my pet.
+            6. Wants to be a perfect happy person.
+            7. Wants to help poor, uneducated people for their better life.
+            8. And when getting old, i want to live in village with my green garden.
+            <!--</p>-->
+                </pre>
+        </div>
     </div>
 </div>
 
