--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Portfolio</title>
 
     <link rel="stylesheet" href="css/bootstrap.css"/>
 
@@ -12,7 +12,9 @@
 <div class="container">
     <!--<div class="container-fluid">-->
     <div class="row">
-        <div class="col-xl-2 col-lg-3 col-md-3 col-sm-6" style="height: 200px; border: 1px solid; " ></div>
+        <div class="col-xl-2 col-lg-3 col-md-3 col-sm-6" style="height: 200px; border: 1px solid; " >
+            <img src="images/IMG_4773-3.jpg" class="img-thumbnail" height="200" width="200" alt=""/>
+        </div>
         <div class="col-xl-10 col-lg-9 col-md-9 col-sm-6 " style="height: 200px; border: 1px solid; " align="middle" >
             <h3 align="middle">Portfolio create by using Bootstrap CSS</h3>
         </div>
@@ -31,10 +33,62 @@
     </div>
 </div>
 
-<div class="container">
+<div class="container" >
     <div class="row">
-        <div class="col-xl-2 col-lg-2 col-md-3 col-sm-4" style="height: 600px; border: 1px solid; " ></div>
-        <div class="col-xl-10 col-lg-10 col-md-9 col-sm-8" style="height: 600px; border: 1px solid; " ></div>
+        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12" style="height: 600px; border: 1px solid; " >
+            <h3>Shetu Chowdhury</h3>
+            <pre align = "left">
+                Address       : House 09, Road 04, Nikunjo 02, Khilkhet.
+                Contact Number: +8801672268919
+                Email         : shetuchowdhury@hotmail.com, shetu09chowdhury@gmail.com
+                <b>Career Objective: </b>
+                Looking for a challenging & growth oriented position for professional experience and willing to work in an environment
+                where an opportunity of self-assessment and self-improvement in both individual and team based work that will help for
+                further improvement.
+                <b>Academic Qualifications: </b>
+                   1. BSc in Computer Science & Engineering: Southeast University; Result: 3.40; Passing year: 2015
+                   2. Higher School Certificate [Science]: Sherpur Govt. College; Result: 4.20; Passing year: 2010
+                   3. Secondary school certificate [Science]: Bazitkhila high school; Result: 4.75; Passing year: 2008
+                <b>Research:</b> Virtual Speech and Language Therapy for Autistic Child.
+                <b>Project:</b>
+                   1. Multi-Level Tic Tac Toe Game for Android Platform.
+                   2. Strategic evaluation of a local company-Shah Cement.
+                <b>Technical Skills:</b>
+                Languages: Java, Flex, Bison, HTML, CSS, PHP.
+                Operating System: Windows 7, Linux.
+                Computer skill: MS office.
+                Extracurricular Activity: part time Web developer & Graphic designer.
+                Interest: Web browsing, Mailing, Watching Movies, cooking etc.
+                <b>Achievements:</b>
+                   a. Many achievement in inter school indoor & outdoor games.
+                   b. 3rd Prize in inter school essay writing competition.
+                <b>Other Activities:</b>
+                   a.Organized reunion party in school.
+                   b.Worked as a volunteer in School, College & University.
+                <b>Working Experience:</b>
+                    <b>Adiva Graphics (Post Charting Associate since 6th September 2015 to 10th November 2017)</b>
+                <b>Job Responsibilities:</b>
+                   1. Charting with Heavy data sheet in MS excel and MS PowerPoint.
+                   2. Statistical analysis of data or survey.
+                   3. Document and data conversion.
+                   4. Survey Quality Checking.
+                   5. Data tab assurance.
+                   6. De-branding (Audio, Video, Image) and Ad transcripts.
+                <b>References:</b>
+                1. Monirul Hasan
+                Lceturer & Coordinator, Department of Computer Science & Engineering.
+                Southeast University.
+                Email: kmhasan@gmail.com
+                Contact Number: +8801811936618
+                2. Md. Kamrul Hasan Chowdhury
+                Lecturer, Department of Mathematics.
+                Chittagong University of Engineering & Technology (CUET).
+                Email: hhimadrii@gmail.com
+                Contact Number: +8801816029599
+
+               </pre>
+        </div>
+
     </div>
 </div>
 
