--- a/gallery.html
+++ b/gallery.html
@@ -12,7 +12,9 @@
 <div class="container">
     <!--<div class="container-fluid">-->
     <div class="row">
-        <div class="col-xl-2 col-lg-3 col-md-3 col-sm-6" style="height: 200px; border: 1px solid; " ></div>
+        <div class="col-xl-2 col-lg-3 col-md-3 col-sm-6" style="height: 200px; border: 1px solid; " >
+            <img src="images/IMG_4773-3.jpg" class="img-thumbnail" height="200" width="200" alt=""/>
+        </div>
         <div class="col-xl-10 col-lg-9 col-md-9 col-sm-6 " style="height: 200px; border: 1px solid; " align="middle" >
             <h3 align="middle">Portfolio create by using Bootstrap CSS</h3>
         </div>
@@ -33,8 +35,28 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-xl-2 col-lg-2 col-md-3 col-sm-4" style="height: 600px; border: 1px solid; " ></div>
-        <div class="col-xl-10 col-lg-10 col-md-9 col-sm-8" style="height: 600px; border: 1px solid; " ></div>
+        <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4" style="height: 600px; border: 1px solid; " >
+            <p>My loving Maa</p>
+            <img src="images/ma.jpg" height="150" width="200" alt="" align="top" class="img-thumbnail">
+            <p>Finally Graduated</p>
+            <img src="images/convocation.jpg" height="150" width="200" alt="" align="top" class="img-thumbnail">
+            <p>Best bonding ever</p>
+            <img src="images/DSC_0891.jpg" height="200" width="150" alt="" align="top" class="img-thumbnail">
+        </div>
+        <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4" style="height: 600px; border: 1px solid; " >
+            <p>Little Hangout</p>
+            <img src="images/lilbro.jpg" height="150" width="200" alt="" align="top" class="img-thumbnail">
+            <p>Surprising gift on birthday</p>
+            <img src="images/bday.jpg" height="150" width="200" alt="" align="top" class="img-thumbnail">
+            <p>Once a evening</p>
+            <img src="images/SM.jpg" height="110" width="150" alt="" align="top" class="img-thumbnail">
+        </div>
+        <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4" style="height: 600px; border: 1px solid; " >
+            <p>Office Party</p>
+            <img src="images/office.jpg" height="300" width="400" alt="" align="top" class="img-thumbnail">
+            <p>Hangout with lovely colleage</p>
+            <img src="images/HOWC.jpg" height="300" width="400" alt="" align="top" class="img-thumbnail">
+        </div>
     </div>
 </div>
 
